// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs/InputText Adornment smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r1:"
         id=":r1:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-mui-classname">
    <input aria-invalid="false"
           id=":r1:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-mui-classname"
              tabindex="-1"
              type="button"
              disabled
              data-cy="icon-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="CloseIcon"
             data-cy="icon-button-icon"
        >
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
          </path>
        </svg>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText AdornmentClickable smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r2:"
         id=":r2:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-mui-classname">
    <input aria-invalid="false"
           id=":r2:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <div class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-mui-classname">
      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-mui-classname"
              tabindex="0"
              type="button"
              data-cy="icon-button"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="CloseIcon"
             data-cy="icon-button-icon"
        >
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
          </path>
        </svg>
        <span class="MuiTouchRipple-root css-mui-classname">
        </span>
      </button>
    </div>
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Disabled smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r3:"
         id=":r3:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl Mui-readOnly MuiInputBase-readOnly css-mui-classname">
    <input aria-invalid="false"
           disabled
           id=":r3:"
           readonly
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-readOnly MuiInputBase-readOnly css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Localized smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r4:"
         id=":r4:-label"
  >
    Campo testuale
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":r4:"
           placeholder="Inserire valore..."
           type="text"
           data-cy="locale.inputText"
           class="MuiInputBase-input MuiOutlinedInput-input css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Campo testuale
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Multiline smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r5:"
         id=":r5:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-multiline css-mui-classname">
    <textarea aria-invalid="false"
              id=":r5:"
              data-cy="input-text"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-mui-classname"
              style="width: 100%; height: 69px;"
    >
      Value
    </textarea>
    <textarea aria-hidden="true"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-mui-classname"
              readonly
              tabindex="-1"
              style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0px); width: 1220px; padding-top: 0px; padding-bottom: 0px;"
    >
    </textarea>
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Placeholder smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="false"
         for=":r6:"
         id=":r6:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":r6:"
           placeholder="Enter value..."
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input css-mui-classname"
           value
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Primary play-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r0:"
         id=":r0:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":r0:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input css-mui-classname"
           value="ValueChanged"
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Required smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r7:"
         id=":r7:-label"
  >
    Label
    <span aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-mui-classname"
    >
       *
    </span>
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":r7:"
           required
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label *
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText SizeSmall smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r8:"
         id=":r8:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-mui-classname">
    <input aria-invalid="false"
           id=":r8:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText Styled smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mui-classname"
         data-shrink="true"
         for=":r9:"
         id=":r9:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":r9:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiOutlinedInput-input css-mui-classname"
           value="Value"
           style="width: 100%; color: red; font-weight: bold; font-size: large; text-align: center;"
    >
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-mui-classname"
    >
      <legend class="css-mui-classname">
        <span>
          Label
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Inputs/InputText VariantFilled smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-filled MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-filled css-mui-classname"
         data-shrink="true"
         for=":ra:"
         id=":ra:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":ra:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiFilledInput-input css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
  </div>
</div>
`;

exports[`Inputs/InputText VariantStandard smoke-test 1`] = `
<div class="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root css-mui-classname"
     style="width: 100%;"
>
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-mui-classname"
         data-shrink="true"
         for=":rb:"
         id=":rb:-label"
  >
    Label
  </label>
  <div class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-mui-classname">
    <input aria-invalid="false"
           id=":rb:"
           type="text"
           data-cy="input-text"
           class="MuiInputBase-input MuiInput-input css-mui-classname"
           value="Value"
           style="width: 100%;"
    >
  </div>
</div>
`;
